Skip to content

Add read-only property like BUILDSYSTEM_TARGETS for IMPORTED targets

Currently BUILDSYSTEM_TARGETS doesn't list imported targets.

Having another property to expose that information would be useful.

My use case is calling find_package() in a subdirectory and changing all the imported targets created in that scope to be global targets. Currently this doesn't seem possible without knowing all the target names beforehand.

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information